--- a/kafka-cluster.yaml
+++ b/kafka-cluster.yaml
@@ -1,15 +1,16 @@
-apiVersion: v1
-kind: ReplicationController
+kind: Deployment
+apiVersion: extensions/v1beta1
 metadata:
-  name: kafka-controller
+  name: kafka-deployment
 spec:
   replicas: 1
   selector:
-    app: kafka
+    matchLabels:
+      name: kafka
   template:
     metadata:
       labels:
-        app: kafka
+        name: kafka
     spec:
       containers:
       - name: kafka
@@ -23,3 +24,5 @@ spec:
           value: [LOADBALANCER_DNS_GOES_HERE]
         - name: KAFKA_ZOOKEEPER_CONNECT
           value: zoo1:2181,zoo2:2181,zoo3:2181
+        - name: KAFKA_CREATE_TOPICS
+          value: mytopic:2:1
