--- a/zookeeper-services.yaml
+++ b/zookeeper-services.yaml
@@ -3,7 +3,7 @@ kind: Service
 metadata:
   name: zoo1
   labels:
-    app: zookeeper-1
+    name: zookeeper-1
 spec:
   ports:
   - name: client
@@ -16,14 +16,14 @@ spec:
     port: 3888
     protocol: TCP
   selector:
-    app: zookeeper-1
+    name: zookeeper-1
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: zoo2
   labels:
-    app: zookeeper-2
+    name: zookeeper-2
 spec:
   ports:
   - name: client
@@ -36,14 +36,14 @@ spec:
     port: 3888
     protocol: TCP
   selector:
-    app: zookeeper-2
+    name: zookeeper-2
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: zoo3
   labels:
-    app: zookeeper-3
+    name: zookeeper-3
 spec:
   ports:
   - name: client
@@ -56,4 +56,4 @@ spec:
     port: 3888
     protocol: TCP
   selector:
-    app: zookeeper-3
+    name: zookeeper-3
